@@ -1,6 +1,11 @@
 CHANGES for LIRE
 ================
 
+2012-12-12
+==========
+  - Added joint histogram class and added it to Searcher and Builder factories.
+  - Fixed bug in JSD implementation.
+
 2012-12-10
 ==========
   - Test for LSH done and reported working.
